--- a/SPA/src/index.html
+++ b/SPA/src/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body class="text-gray-200 font-sans pb-8">
+<body>
   <app-root></app-root>
 </body>
 </html>
